# IHP-GDSFactory-Addon

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Klayout PyCell Checklist.xlsx  Klayout_PCell_Checklist.xlsx  LICENSE  README.md  playground.py  pyproject.toml  test.py
.github/: dependabot.yml
.github/workflows/: test_code.yml
ihp/: __init__.py  config.py  layer_map_ihp.py  tech.py
ihp/cells/: __init__.py  antennas.py  bjt_transistors.py  bondpads.py  capacitors.py  containers.py  diodes.py  inductors.py  mos_transistors.py  passives.py  resistors.py  rf_devices.py  utils.py  via_stacks.py  waveguides.py
ihp/klayout/tech/: tech.lyt
