# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "ruff"]

[project]
authors = [{name = "gdsfactory", email = "contact@gdsfactory.com"}]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = [
  "gdsfactory~=9.18.1",
  "gplugins[sax]~=1.4.2",
  "doroutes>=0.2.0"
]
description = "IHP pdk"
keywords = ["python"]
license = {file = "LICENSE"}
name = "ihp"
readme = "README.md"
requires-python = ">=3.11,<3.14"
version = "0.0.6"

[project.optional-dependencies]
dev = [
  "pre-commit"
]

[tool.codespell]
ignore-words-list = "te,fpr,nd,donot,schem"

[tool.gdsfactoryplus.pdk]
name = "ihp"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pydocstyle]
add-ignore = ["D100", "D101", "D102", "D103", "D104", "D203", "D405", "D417"]
convention = "google"
inherit = false
match = "(?!test).*\\.py"

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "C901",  # too complex
  "B905",  # `zip()` without an explicit `strict=` parameter
  "C408"  # C408 Unnecessary `dict` call (rewrite as a literal)
]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
  "UP"
]

[tool.ruff.lint.per-file-ignores]
"ihp/cells/__init__.py" = ["F403"]  # allowing star imports to aggregate cells
"ihp/models/__init__.py" = ["F403"]  # allowing star imports to aggregate cells

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.csv", "*.yaml", "*.yml", "*.gds", "*.lyp", "*.oas", "*.lyt", "*.dat", "*.nc", "*.svg", '*.GDS', "*.json", "*.txt"]

[tool.setuptools.packages.find]
include = ["ihp", "ihp.*"]
where = ["."]

