# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "ruff"]

[project]
authors = [{name = "David Kellerer-Pirklbauer"}, {name = "Simon Dorrer"}]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
dependencies = [
  "gdsfactory>=9.18.1,<10",
  "doroutes>=0.2.0",
  "scipy"
]
description = "GDSFactory Addon for the IHP Open-PDK"
keywords = ["python"]
license = {file = "LICENSE"}
name = "ihp"
readme = "README.md"
requires-python = ">=3.11,<3.14"
version = "0.1.0"

[project.optional-dependencies]
dev = [
  "pre-commit"
]

[project.urls]
Repository = "https://github.com/iic-jku/IHP-GDSFactory-Addon"

[tool.codespell]
ignore-words-list = "activ,passiv,te,fpr,nd,donot,schem,linz,contnet"

[tool.gdsfactoryplus.pdk]
name = "ihp"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pydocstyle]
add-ignore = ["D100", "D101", "D102", "D103", "D104", "D203", "D405", "D417"]
convention = "google"
inherit = false
match = "(?!test).*\\.py"

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.ruff]
fix = true

[tool.ruff.lint]
ignore = [
  "E501",  # line too long, handled by black
  "B008",  # do not perform function calls in argument defaults
  "C901",  # too complex
  "B905",  # `zip()` without an explicit `strict=` parameter
  "C408",  # C408 Unnecessary `dict` call (rewrite as a literal)
  "E402",  # module level import not at top of file (sg13g2_pycell_lib needs sys.path setup first)
  "E741"  # ambiguous variable name `l` (matches the IHP PCell parameter names)
]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
  "UP"
]

[tool.ruff.lint.per-file-ignores]
"ihp/cells/*" = ["F403", "F405"]  # cells use `from .utils import *` for the PCell helpers

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.csv", "*.yaml", "*.yml", "*.gds", "*.lyp", "*.oas", "*.lyt", "*.dat", "*.nc", "*.svg", '*.GDS', "*.json", "*.txt"]

[tool.setuptools.packages.find]
include = ["ihp", "ihp.*"]
where = ["."]
